web/client/styles/game.css
.player-card-parent {
  display:flex;
}

.player-card {
  border: 1px solid;
  padding: 10px;
  --player-card-margin: 0.5em;
  margin-top: var(--player-card-margin);
  margin-bottom: var(--player-card-margin);
  width: 100%;
}

.player-clock {
  background-color: lightgrey;
  padding: .2em;
}

.player-clock-active {
  background-color: lime;
}

#status {
  background-color: lightgrey;
  padding: 0.2em;
}

#board-section {
  position: relative;

#board-content {
  padding: 10px;
}
}
#board-graphical {
  display: flex;
  justify-content: center;
  align-items: center;
  width: min(100%, 500px);
  border-radius: 10%;
  position: relative;
  border: 1px solid;
}
/* this is to make the board a responsive square
   https://spin.atomicobject.com/2015/07/14/css-responsive-square/ */
#board-graphical:after {
  content: "";
  display: block;
  padding-bottom: 100%;
}

#board-inner-padding {
  position: absolute;
  width: 90%;
  height: 90%;
}

#board-inner {
  border-radius: 2%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  width: 100%;
  height: 100%;
}

#board-inner > div {
  border-radius: 10%;
}

.board-bg {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
  grid-row-start: 1;
  grid-column-start: 1;
}

.board--marble-spaced {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
  grid-row-start: 1;
  grid-column-start: 1;
  padding: calc(100% / 8 / 2);
}

.board--bg-dot {
  --margin-board--bg-dot: calc(100% / 7 * 0.35);
  --board--bg-dot-size: calc(100% / 7 - var(--margin-board--bg-dot) * 2);

  border-radius: 50%;
  background-color: white;
  border: 1px solid currentcolor;
  margin: var(--margin-board--bg-dot);
  width: var(--board--bg-dot-size);
  height: var(--board--bg-dot-size);
}

.board--bg-line-vertical {
  --margin-board--bg-line-vertical: calc((100% / 7 - 1px)/ 2);
  width: 1px;
  height: calc(100% - var(--margin-board--bg-line-vertical) * 2);
  background-color: currentcolor;
  margin: var(--margin-board--bg-line-vertical);
}
.board--bg-line-horizontal {
  --margin-board--bg-line-horizontal: calc((100% / 7 - 1px)/ 2);
  height: 1px;
  width: calc(100% - var(--margin-board--bg-line-horizontal) * 2);
  background-color: currentcolor;
  margin: var(--margin-board--bg-line-horizontal);
}

.marble-base {
  border-radius: 50%;
  width: calc(100% / 7);
  height: calc(100% / 7);
  border: 1px solid;
  box-shadow: 3px 3px;
}
.marble-white {
  background-color: #EDEADE;
}
.marble-black {
  background-color: #36454F;
}
.marble-red {
  background-color: red;
}
.marble-null {
  border: none;
  box-shadow: none;
}
.marble-ghost {
  opacity: 0.5;
}

.input-selectable:hover {
  border: 2px dotted red;
}
.input-selected{
  border: 2px solid blue;
}
.input-base {
  width: calc(100% / 7);
  height: calc(100% / 7);
  z-index: 100;
}

#move-history-wrapper {
  --move-history-wrapper-padding-tb: 10px;
  padding-top: var(--move-history-wrapper-padding-tb);
  padding-bottom: var(--move-history-wrapper-padding-tb);
  border: 1px solid;
  white-space: nowrap;
  overflow-x: scroll;
}
#move-history li {
  display: inline;
}
#move-history li::after {
  content: ", ";
}
#move-history li:last-child::after {
  content: "";
}
.move-history--last-move {
  background-color: lightgrey;
  padding: 5px;
  border-radius: 10px;
}

#move-history-controls {
  display: flex;
  justify-content: center;
}
#move-history-first {
  border-top-right-radius: 0;
  border-top-left-radius: 0;
  border-bottom-right-radius: 0;
  border-right: none;
  border-top: none;
}
#move-history-prev, #move-history-next {
  border-radius: 0;
  border-right: none;
  border-top: none;
}
#move-history-last {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-top: none;
}

#resign-button {
  --resign-button-margin: 0.5em;
  margin-top: var(--resign-button-margin);
  margin-bottom: var(--resign-button-margin);
}

@media (min-width: 900px) {

#game-dash {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

}

